Finished coding section location about page

--- a/about.html
+++ b/about.html
@@ -3,7 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>About | Arroceros Urban Forest Park</title>
+    <link rel="stylesheet" href="css/index.css" />
   </head>
-  <body></body>
+  <body>
+    <section class="location">
+      <div class="container">
+        <div class="location-header">
+          <h2>location</h2>
+        </div>
+        <div class="location-content grid-container">
+          <div class="info">
+            <p>The park was established in 1993 after the government's education department offices were transferred to its present location in Pasig. Through a memorandum of agreement signed between the City of Manila and Winner Foundation supported by then First Lady Amelita Ramos, the city agreed to lease the site for development as a nature park by the private environmental group.</p>
+            <p>With an initial 150 century-old trees that survived the war, the park now hosts over 3,000 trees through reforestation efforts spearheaded by the Manila Seedling Bank.</p>
+            <p>Arroceros Urban Forest Park is often referred to as a "breathing space" in the midst of the urban environment of Manila. It serves as a green oasis where people can escape the hustle and bustle of the city and enjoy a tranquil environment filled with trees, plants, and wildlife.</p>
+            <a href="#">read more</a>
+          </div>
+          <div class="info-img">
+            <img src="img/arroceros-forest-park-location.JPG" alt="Arroceros Forest Park Location" />
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
