added images on cards and logo. also created nav and footer.

--- a/gallery.html
+++ b/gallery.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <link rel="stylesheet" href="css/navbar.css">
-    <title>Document</title>
-  </head>
-  <body>
+    <title>Galery Page</title>
+</head>
+<body>
     <header>
-      <!-- NAV START -->
-      <nav class="navbar fixed-top navbar-light bg">
+        <!-- NAV START -->
+        <nav class="navbar fixed-top navbar-light bg">
           <div class="container-fluid container">
-              <a class="navbar-brand" href="index.html"><img width="100px" src="logo.png" alt="logo"></a>
+              <a class="navbar-brand" href="index.html"><img width="100px" src="images/logo.png" alt="logo"></a>
             <ul class="nav justify-content-end">
               <li class="nav-item">
                 <a class="nav-link" href="about.html">About us</a>
@@ -24,7 +29,70 @@
             </ul>
           </div>
         </nav>
-        <!-- NAV END -->
-  </header>
-  </body>
+          <!-- NAV END -->
+    </header>
+    <main>
+      <!-- GALLERY START -->
+      <div class="container">
+        <div class="trees-header">
+          <h2 style="margin-top: 50px;">Trees</h2>
+          <p>Trees are perennial plants with a woody stem or trunk, supporting branches and leaves. They play a crucial role in the environment by producing oxygen, absorbing carbon dioxide, providing habitat and food for various organisms, preventing soil erosion, and offering shade and aesthetic beauty.</p>
+        </div>
+      </div>
+      <div class="container" style="padding-top: 50px;">
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="card">
+              <img src="images/African Tulip Tree.jpg" class="card-img-top radius-padding" alt="African Tulip Tree">
+              <div class="card-body">
+                <h5 class="card-title"><b>African Tulip Tree</b></h5>
+                <p class="card-text">The flower bud is ampule-shaped and contains water. People sometimes play with these buds because of their ability to squirt water. The sap sometimes stains yellow on fingers and clothes. The open flowers are cup-shaped and hold rain and dew, making them attractive to many species of birds.</p>
+                <a href="#">See more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="card">
+              <img src="images/Mahogany Tree.jpg" class="card-img-top radius-padding" alt="Mahogany Tree">
+              <div class="card-body">
+                <h5 class="card-title"><b>Mahogany Tree</b></h5>
+                <p class="card-text">Mahogany is wood from any of three tree species: Honduran or big-leaf mahogany, West Indian or Cuban mahogany, and Swietenia humilis. Honduran mahogany is the most widespread and the only genuine mahogany species commercially grown today.</p>
+                <a href="#">See more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="card">
+              <img src="images/Banyan Tree.jpg" class="card-img-top radius-padding" alt="Banyan Tree">
+              <div class="card-body">
+                <h5 class="card-title"><b>Banyan Tree</b></h5>
+                <p class="card-text">A banyan, also spelled "banian", is a fig that develops accessory trunks from adventitious prop roots, allowing the tree to spread outwards indefinitely. This distinguishes banyans from other trees with a strangler habit that begin life as an epiphyte, a plant that grows on another plant.</p>
+                <a href="#">See more</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- GALLERY END -->
+
+      <!-- FOOTER START -->
+      <footer>
+        <div class="footer">
+          <div class="footer-wrapper">
+            <div class="footer-logo">
+              <div class="footer-socmeds">
+                <a href="https://www.facebook.com/" class="fa fa-facebook" target="_blank"></a>
+                <a href="https://www.instagram.com" class="fa fa-instagram" target="_blank"></a>
+                <a href="https://twitter.com/" class="fa fa-twitter" target="_blank"></a>
+                <a href="https://www.linkedin.com/" class="fa fa-linkedin" target="_blank"></a>
+              </div>
+              <br>
+              <p>© 2023 Arroceros Gubat. All Rights Reserved</p></a>
+            </div>
+          </div>
+        </div>
+      </footer>
+      <!-- FOOTER END -->
+    </main>
+</body>
 </html>
