--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <!-- NAV START -->
         <nav class="navbar fixed-top navbar-light bg">
             <div class="container-fluid container">
-                <a class="navbar-brand" href="index.html"><img width="100px" src="logo.png" alt="logo"></a>
+                <a class="navbar-brand" href="index.html"><img width="100px" src="images/logo.png" alt="logo"></a>
               <ul class="nav justify-content-end">
                 <li class="nav-item">
                   <a class="nav-link" href="about.html">About us</a>
