--- a/index.html
+++ b/index.html
@@ -4,18 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/arroceros-gubat/css/explorer.css">
-</head>
+    <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/explorer.css">
+  </head>
 <body>
-    <div class="container">
-    <div class="column left-column">
-      <h1> Did you know? </h1>
-      <p>It is often referred to as the "Last Lung of Manila" due to its significance in providing much-needed greenery and biodiversity within the urban landscape. The park is known for its diverse collection of trees, including around 3,000 trees from over 60 different species, making it an important haven for various plant and bird species in the midst of the city's concrete jungle. </p>
-      -Philippine Daily Inquirer (2017)</p> 
-    <a href="#"> Read More > </a> </div>
-    <div class="column right-column">
-      <img src="media/last lung.jpg" alt="Image">
-    </div>
-  </div>
+    <section class="explorer">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-9"> 
+            <h1> Did you know? </h1>
+            <p>It is often referred to as the "Last Lung of Manila" due to its significance in providing much-needed greenery and biodiversity within the urban landscape. The park is known for its diverse collection of trees, including around 3,000 trees from over 60 different species, making it an important haven for various plant and bird species in the midst of the city's concrete jungle. </p>
+            -Philippine Daily Inquirer (2017)</p> 
+          <a href="#"> Read More > </a> </div>
+          <div class="col-lg-3"> <img src="media/last lung.jpg" class="img-fluid" alt="Image"> </div>
+        </div>
+      </div>
+    </section>
 </body>
 </html>
