improve section location this time using bootstrap

--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
         <div class="location-header">
           <h2 class="display-6 text-capitalize lead fs-3 fw-bold">location</h2>
         </div>
+
         <div class="row">
           <div class="col-lg-6 mx-auto my-3">
             <p>The park was established in 1993 after the government's education department offices were transferred to its present location in Pasig. Through a memorandum of agreement signed between the City of Manila and Winner Foundation supported by then First Lady Amelita Ramos, the city agreed to lease the site for development as a nature park by the private environmental group.</p>
@@ -21,7 +22,7 @@
             <a class="text-capitalize text-decoration-none" href="#">read more</a>
           </div>
           <div class="col-lg-6 mx-auto align-self-center my-3">
-            <img src="img/arroceros-forest-park-location.JPG" alt="Arroceros Forest Park Location" />
+            <img class="img-fluid" src="img/arroceros-forest-park-location.JPG" alt="Arroceros Forest Park Location" />
           </div>
         </div>
       </div>
