--- a/gallery.html
+++ b/gallery.html
@@ -6,38 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-
-    <style>
-      header {
-        justify-content:center;
-        align-items: center;
-      }
-      body{
-      font-family: Inter; 
-      background-color:#E7E8A6;
-      }
-
-      .img1 {
-        height: 75%;
-        position:relative;
-        margin:auto;
-        margin-top:100px;
-      }
-
-      .img2 {
-        height: 75%;
-        position:relative;
-        margin:auto;
-        margin-top:100px;
-
-      }
-      .img3 {
-        height:70%;
-        position:relative;
-        margin:auto;
-        margin-top:100px;
-      }
-    </style>
+  <link rel="stylesheet" href="css/gallery.css">
 </head>
 <body>
 <header>
@@ -54,21 +23,21 @@
   <!-- The slideshow/carousel -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/24/16/47/05/along-pasig-river.jpg?w=1200&h=-1&s=1" alt="Pasig River" class="d-block img1" style="width:80%">
+      <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/24/16/47/05/along-pasig-river.jpg?w=1200&h=-1&s=1" alt="Pasig River" class="d-block img1" style="width:100%">
       <div class="carousel-caption">
         <p>An esplanade along the Pasig River located at one end of the forest park.</p>
       </div>
     </div>
 
    <div class="carousel-item">
-      <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/24/16/1f/10/caption.jpg?w=1200&h=-1&s=1" alt="Welcome Sign" class="d-block img2" style="width:80%">
+      <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/24/16/1f/10/caption.jpg?w=1200&h=-1&s=1" alt="Welcome Sign" class="d-block img2" style="width:100%">
       <div class="carousel-caption">
         <p>The welcome sign to the park at the pedestrianized plaza outside the park.</p>
       </div> 
     </div>
     
     <div class="carousel-item">
-      <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/24/16/47/01/fountain-near-rhe-exit.jpg?w=1200&h=-1&s=1" alt="Exhibit Path" class="d-block img3" style="width:80%">
+      <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/24/16/47/01/fountain-near-rhe-exit.jpg?w=1200&h=-1&s=1" alt="Exhibit Path" class="d-block img3" style="width:100%">
       <div class="carousel-caption">
         <p>A series of exhibits on the fauna and flora in the forest park.</p>
       </div>  
