--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/index.css">
-</head>
+    <link rel="stylesheet" href="css/home.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+  </head>
 <body>
-    <div class="hero-image">
-        <div class="hero-text">
-          <h1>VISIT ARROCEROS FOREST PARK</h1>
-         
-        </div>
-      </div>
-      
+  <!-- Navbar -->
+  <div class="img-container">
+    <img class="img-fluid" src="https://scontent.fceb2-1.fna.fbcdn.net/v/t39.30808-6/294556063_102862089188918_1110871396300454310_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=8bfeb9&_nc_eui2=AeHMNqq3pXWxD4NcvuhHX6Y6FrH3bjeVAssWsfduN5UCy3TgQ9dv8mZ0KRaCzGa8pqRCnS-ayHqf8QltcveDUkEC&_nc_ohc=yqcaiOt0Ow8AX-NQO3b&_nc_ht=scontent.fceb2-1.fna&_nc_e2o=c&oh=00_AfDCba9k1oaLkGx0uvqdtKxagM03Jwr-q1NOFRN8mq0mLw&oe=64EF9D71" alt="Forest Park">  
+  </div>
 <body>
 </html>
