--- a/about.html
+++ b/about.html
@@ -15,9 +15,10 @@
   </head>
   <body>
     <!-- NAV START -->
+    <header>
     <nav class="navbar fixed-top navbar-light bg">
       <div class="container-fluid">
-          <a class="navbar-brand" href="index.html"><img  src="images/logo.png" alt="logo" width="87px"></a>
+          <a class="navbar-brand" href="index.html"><img  src="images/logo.png" alt="logo"></a>
         <ul class="nav justify-content-end">
           <li class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
@@ -31,6 +32,7 @@
         </ul>
       </div>
     </nav>
+  </header>
   <!-- NAV END -->
     <div class="container-fluid mt-5">
         <div class="row">
