--- a/gallery.html
+++ b/gallery.html
@@ -14,11 +14,12 @@
     <title>Galery Page</title>
 </head>
 <body>
-    <header>
+    
     <!-- NAV START -->
+    <header>
     <nav class="navbar fixed-top navbar-light bg">
       <div class="container-fluid">
-          <a class="navbar-brand" href="index.html"><img  src="images/logo.png" alt="logo" width="87px"></a>
+          <a class="navbar-brand" href="index.html"><img  src="images/logo.png" alt="logo"></a>
         <ul class="nav justify-content-end">
           <li class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
@@ -32,8 +33,8 @@
         </ul>
       </div>
     </nav>
+  </header>
   <!-- NAV END -->
-    </header>
     <div>
       <!-- CAROUSEL START -->
       <div id="demo" class="carousel slide" data-bs-ride="carousel">
