--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 <body>
-    <header>
+    
     <!-- NAV START -->
+    <header>
     <nav class="navbar fixed-top navbar-light bg">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html"><img  src="images/logo.png" alt="logo" width="87px"></a>
+            <a class="navbar-brand" href="index.html"><img  src="images/logo.png" alt="logo"></a>
           <ul class="nav justify-content-end">
             <li class="nav-item">
               <a class="nav-link active-nav" href="index.html">Home</a>
@@ -32,8 +33,9 @@
           </ul>
         </div>
       </nav>
-    <!-- NAV END -->
     </header>
+    <!-- NAV END -->
+    
     <div >
         <div class="row">
         <div class="col-md-12">
